fix(submission): fix status text overflow on two-row view submisson page

--- a/src/pages/submission/componments/SubmissionItem.module.less
+++ b/src/pages/submission/componments/SubmissionItem.module.less
@@ -210,7 +210,7 @@
     > :nth-child(1) {
       // Wide screen
       @media only screen and (min-width: 540px) {
-        width: 200px;
+        width: 240px;
 
         // Row 1
         > :nth-child(1) > {
